--- a/bookstore/templates/base.html
+++ b/bookstore/templates/base.html
@@ -8,7 +8,6 @@
     <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bulma.css' %}">
     <script type="text/javascript" src="{% static 'js/jquery-1.12.4.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jquery-ui.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/slide.js' %}"></script>
@@ -42,7 +41,7 @@
                     <span>|</span>
                     <a href="{% url 'cart:show' %}">我的购物车</a>
                     <span>|</span>
-                    <a href="{% url 'order:place' %}">我的订单</a>
+                    <a href="#">我的订单</a>
                 </div>
             </div>
         </div>      
