--- a/bookstore/templates/users/register.html
+++ b/bookstore/templates/users/register.html
@@ -1,9 +1,9 @@
-
-{% extend 'base.html' %}
+{% extends 'base.html' %}
 {% load staticfiles %}
 {% block title %}{% endblock title %}
 {% block topfiles %}{% endblock topfiles %}
 {% block header_con %}{% endblock header_con %}
+{% block cart_count %}{% endblock cart_count %}
 {% block search_bar %}{% endblock search_bar %}
 {% block body %}
 	<div class="register_con">
