--- a/bookstore/templates/users/user_center_info.html
+++ b/bookstore/templates/users/user_center_info.html
@@ -10,8 +10,8 @@
             <h3>用户中心</h3>
             <ul>
                 <li><a href="{% url 'user:user' %}" class="active">· 个人信息</a></li>
-                <li><a href="/">· 全部订单</a></li>
-                <li><a href="/}">· 收货地址</a></li>
+                <li><a href="{% url 'user:order' %}">· 全部订单</a></li>
+                <li><a href="{% url 'user:address' %}">· 收货地址</a></li>
             </ul>
         </div>
         <div class="right_content clearfix">
