--- a/bookstore/templates/order/place_order.html
+++ b/bookstore/templates/order/place_order.html
@@ -4,27 +4,27 @@
 {% block topfiles %}
 {% endblock topfiles %}
 {% block body %}
-ass="common_title">确认收货地址</h3>
+    <h3 class="common_title">确认收货地址</h3>
 
     <div class="common_list_con clearfix">
         <dl>
             <dt>寄送到：</dt>
             <dd><input type="radio" name="addr_id" value="{{ addr.id }}" checked="">{{ addr.recipient_addr }} （{{ addr.recipient_name }} 收） {{ addr.recipient_phone }}</dd>
         </dl>
-        <a href="user_center_site.html" class="edit_site">编辑收货地址</a>
+        <a href="{% url 'user:address' %}" class="edit_site">编辑收货地址</a>
 
     </div>
 
     <h3 class="common_title">支付方式</h3>
     <div class="common_list_con clearfix">
         <div class="pay_style_con clearfix">
-            <input type="radio" name="pay_style" checked>
+            <input type="radio" name="pay_style" value="1" checked>
             <label class="cash">货到付款</label>
-            <input type="radio" name="pay_style">
+            <input type="radio" name="pay_style" value="2">
             <label class="weixin">微信支付</label>
-            <input type="radio" name="pay_style">
+            <input type="radio" name="pay_style" value="3">
             <label class="zhifubao"></label>
-            <input type="radio" name="pay_style">
+            <input type="radio" name="pay_style" value="4">
             <label class="bank">银行卡支付</label>
         </div>
     </div>
@@ -62,6 +62,7 @@ ass="common_title">确认收货地址</h3>
     </div>
 
     <div class="order_submit clearfix">
+        {% csrf_token %}
         <a href="javascript:;" id="order_btn" books_ids="{{ books_ids }}">提交订单</a>
     </div>
 {% endblock body %}
